--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,77 @@
-html{
+/*html{
   min-height: 100%;
 }
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   background: url(/img/zaio_background.png) no-repeat;
   background-size: cover;
   background-position: center;
   height: 100%;
 }
+
+#content{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: minmax(150px, auto);
+  grid-gap: 10px;
+  max-width: 960px;
+  margin: 0 auto;
+  grid-template-areas:
+    "header header header header header header"
+    "main main main main main main"
+    "main main main main main main"
+    "ad ad ad ad ad ad"
+    "ad ad ad ad ad ad"
+    "side side side side side side"
+    "footer footer footer footer footer footer"
+}
+
+@media screen and (min-width: 760px){
+  #content{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 10px;
+    max-width: 960px;
+    margin: 0 auto;
+    grid-template-areas:
+      "header header header header header header"
+      "main main main main ad ad"
+      "main main main main ad ad"
+      "main main main main ad ad"
+      "main main main main side side"
+      "main main main main side side"
+      "footer footer footer footer footer footer"
+  }
+}
+
+.main-nav{
+  grid-area: nav;
+}
+
+.content{
+  grid-area: content;
+}
+
+.ad{
+  grid-area: ad;
+}
+
+.side{
+  grid-area: side;
+}
+
+.App{
+  display: grid;
+  grid-gap: 20px;
+}
+
+
+
+#content > *{
+padding: 30px;
+}
+
 form{
   padding:20px;
   margin-top: 60px;
@@ -72,4 +134,80 @@ textarea.materialize-textarea:focus:not([readonly]){
   float: left;
   width: 60%;
   padding:24px
+}
+*/
+
+html{
+  min-height: 100%;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background: url(/img/zaio_background.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+}
+form{
+  padding:20px;
+  margin-top: 60px;
+}
+form button, form h5{
+  margin: 20px 0;
+}
+
+input[type=text]:not(.browser-default):focus:not([readonly]),
+input[type=email]:not(.browser-default):focus:not([readonly]),
+input[type=password]:not(.browser-default):focus:not([readonly]),
+textarea.materialize-textarea:focus:not([readonly]){
+  border-color: blue;
+  box-shadow: none;
+}
+
+.homepage.container{
+  width:95%
+}
+.dashboard.container{
+  width:95%
+}
+
+.nav-wrapper.container{
+  position: sticky;
+}
+
+.heading{
+  font-size: 2rem;
+}
+
+.content{
+  float: left;
+  width: 60%;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.side{
+  float: right;
+  width: 30%;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.ad{
+  float: right;
+  margin-bottom: 24px;
+}
+
+.groupDetails{
+  float: right;
+  width: 77%;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.GroupDetailsBox{
+  padding-top:10px;
+  padding-bottom:10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
